# academia-admin-automation

./: .gitignore  README.md  enrollment_dashboard.py  mol2scad.py  process_enrollment.py  process_enrollment2.py  pyproject.toml  scheduler.py
.github/workflows/: codeql.yml
enrollment_dashboard/: enrollment_dashboard.py  requirements.txt
process_enrollment/: process_enrollment.py
retrieve_enrollment/: info.txt  private.py  retrieve_enrollment.py
